--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
         <div id="tab01" class="tab-contents">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-12">
-              <h4 class="wow animate__animated animate__slideInRight">Full ATC </h4>
               <h3>Heritage Scheme for Full ATC</h3>
               <p>The George Telegraph Training Institute started franchisee operations in the year 1997. Since then this
                 Institute went ahead to open franchisee training centres i.e. Authorized Training Centres (ATCs) in
@@ -215,13 +214,128 @@
 
         </div>
         <div id="tab02" class="tab-contents">
-          <h4 class="wow animate__animated animate__slideInRight">Our Core Values</h4>
+          <h3>Franchisee for Beauty & Wellness</h3>
+          <p>George Telegraph has been shaping careers using over well-defined 80 vocational courses, especially
+            beauty parlor courses for aspirants across different strata of society- from the grassroots to the well-
+            heeled. We are an ISO 9001:2015 certified registered trust body. George Telegraph Training Institute
+            (GTTI) has come a long way since its inception 104 years ago, spearheading the quest for excellence of
+            the nation's youth by way of providing cutting-edge teaching and training through exclusive and in sync
+            vocational courses. We are offering the most top-notch professional beautician training course.</p>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-12">
+              <h3>The Advantages of Beauty & Wellness Franchisee</h3>
+              <ul>
+                <li>Beauty & wellness training is "in" right now. By investing in a training centre that trains future
+                  beauty & wellness professionals, you are moving ahead with time.</li>
+                <li>Your association with the beauty & wellness training industry enables you to contribute directly
+                  towards the growth and development of the nation.</li>
+                <li>George Telegraph College of Beauty & Wellness has a wide bouquet of courses that touches almost
+                  every area in this field. This increases the chances of success of the investor.</li>
+                <li>Our courses across our demographic presence are recognized by the National Skills Development
+                  Corporation (N.S.D.C.) which is under The Ministry of Skill Development and Entrepreneurship, Govt
+                  of India. Many of our courses are also affiliated to Netaji Subhas Open University (N.S.O.U) which
+                  is under UGC.</li>
+                <li>Low Investment – Formation of a Smart Centre involves nominal funds. </li>
+                <li>Less Risk involved - Due to involvement of nominal funds, this is a less risky venture. </li>
+                <li>Low Working Capital - Working capital for daily requirement is also low. </li>
+                <li>Good and Early Returns – Due to low investment, returns are good and quick</li>
+              </ul>
+              <div class="mt-4">
+                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="30px" class="me-2">Download
+                  Application Details and Form</button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="tab-img mt-4">
+                <img src="assets/img/house.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
         </div>
         <div id="tab03" class="tab-contents">
-          <h4 class="wow animate__animated animate__slideInRight">Salient Features</h4>
+          <h3>Franchisee for Automobile Engineering</h3>
+          <p>George Telegraph has been shaping careers using over well-defined 80 vocational courses, especially
+            Automobile Engineering courses for aspirants across different strata of society- from the grassroots to
+            the well- heeled. We are an ISO 9001:2015 certified registered trust body. George Telegraph Training
+            Institute (GTTI) has come a long way since its inception 104 years ago, spearheading the quest for
+            excellence of the nation's youth by way of providing cutting-edge teaching and training through
+            exclusive and in sync vocational courses. A Diploma in Automobile Engineering is a specialized
+            educational program that provides comprehensive knowledge in various domains, including mechanical,
+            electrical, electronics, software, and safety engineering, all of which are applied to the design,
+            production, and operation of vehicles. This field is not limited to just cars; it extends to buses and
+            trucks as well.</p>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-12">
+              <h3>The Advantages of Franchisee for Automobile Engineering</h3>
+              <ul>
+                <li>In India, there are several potential career opportunities in automobile engineering. It is among
+                  India's fastest-growing engineering industries. Since the demand for passenger-carrying motor vehicles
+                  is on the rise, automobile engineering has gained popularity and significance. Automobile repair
+                  courses are currently in high demand due to the rapid development of car component manufacturers and
+                  the automobile sector.</li>
+                <li><b>Automobile engineering</b> subjects have gained a lot of prospects with the increasing popularity
+                  of
+                  IT, mechanics, and design in the mechanical engineering field. The design, development, manufacture,
+                  testing, maintenance, and servicing of automobiles, including cars, trucks, motorcycles, scooters,
+                  etc., as well as related sub-engineering systems, are the focus of these branches.</li>
+                <li>George Telegraph Training Institute has built a legacy in providing students with top-notch
+                  <b>automobile engineering jobs</b>. Placement has always been one of our priorities.
+                </li>
+                <li>Low Investment – Formation of a Smart Centre involves nominal funds. </li>
+                <li>Less Risk involved - Due to involvement of nominal funds, this is a less risky venture. </li>
+                <li>Low Working Capital - Working capital for daily requirement is also low. </li>
+                <li>Easy Human Resource Management - Less number of human resources required. </li>
+                <li>Good and Early Returns – Due to low investment, returns are good and quick. </li>
+              </ul>
+              <div class="mt-4">
+                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="30px" class="me-2">Download
+                  Application Details and Form</button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="tab-img mt-4">
+                <img src="assets/img/house.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
         </div>
 
         <div id="tab04" class="tab-contents">
+          <h3>Franchisee for Smart Centre</h3>
+          <p>The George Telegraph Training Institute are committed to the vision of our Founder, "To provide means of
+            income generation to the youth of India." This philosophy has nourished three generations of Indians and we
+            are proud that many of our present students are grandsons/ granddaughters of our first alumnae. Over a span
+            of more than nine decades this Institute has established itself as the premier source of vocational training
+            in a spectrum of job oriented courses designed to enable our students either to enter into employment as
+            qualified professionals or to establish their own business units. This was also recognized by the National
+            Skill Development Corporation (NSDC), a Government of India Project, making us their Training Partner and
+            affiliating all the courses run by GTTI.</p>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-12">
+              <h3>The Advantage of Smart Centre</h3>
+              <ul>
+                <li>Low Investment – Formation of a Smart Centre involves nominal funds. </li>
+                <li>Less Risk involved - Due to involvement of nominal funds, this is a less risky venture. </li>
+                <li>Low Working Capital - Working capital for daily requirement is also low.
+                </li>
+                <li>Easy Human Resource Management - Less number of human resources required. </li>
+                <li>Good and Early Returns – Due to low investment, returns are good and quick. </li>
+                <li>Cost incurred for Human Resources - So cost of procurement, retention and motivating the human
+                  resources is also low. </li>
+                <li>Easy to Start - Entry barriers are low to start this business.</li>
+
+              </ul>
+              <div class="mt-4">
+                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="30px" class="me-2">Download
+                  Application Details and Form</button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-12">
+              <div class="tab-img mt-4">
+                <img src="assets/img/house.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -230,34 +344,42 @@
   <section class="game-section chose mb">
     <div class="container">
       <div class="row">
-       <div class="col-lg-3 col-md-3 col-12">
-      <h2 style="text-align: left;" id="marf">Keypoints For <br>
-        The Franchisee</h2>
-       </div>
-       <div class="col-lg-9 col-md-3 col-12">
-        <div class="owl-carousel custom-carousel owl-theme">
-          <div class="item active" style="background-image: url(./assets/img/boy.png);">
-            <div class="item-desc">
-              <h3>Your Gain</h3>
-              <p>Financial stability with high
-                returns</p>
+        <div class="col-lg-3 col-md-3 col-12">
+          <h2 style="text-align: left;" id="marf">Keypoints For <br>
+            The Franchisee</h2>
+        </div>
+        <div class="col-lg-9 col-md-3 col-12">
+          <div class="owl-carousel custom-carousel owl-theme">
+            <div class="item active" style="background-image: url(./assets/img/boy.png);">
+              <div class="item-desc">
+                <h3>Tour Gain</h3>
+                <ul>
+                  <li>Financial Stability with high returns</li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="item" style="background-image: url(./assets/img/img2.jpg);">
-            <div class="item-desc">
-              <h3>Why Us</h3>
-              <p>Our team of experts is here to help you along your trading adventure. Our experienced advisors are here
-                to guide you through the financial markets.</p>
+            <div class="item" style="background-image: url(./assets/img/img2.jpg);">
+              <div class="item-desc">
+                <h3>Why Us</h3>
+                <ul>
+                  <li>104 years of Training Experience.</li>
+                  <li>70+ Centres , 80+ courses.</li>
+                  <li>Lifetime placement assistant.</li>
+                  <li>Job ready courses</li>
+                </ul>
+              </div>
             </div>
-          </div>
-          <div class="item" style="background-image: url(./assets/img/img3.jpg);">
-            <div class="item-desc">
-              <h3>Eligibility</h3>
-              <p>Trade micro, mini or standard lots. Find the lot size that's right for you to manage risk.</p>
+            <div class="item" style="background-image: url(./assets/img/img3.jpg);">
+              <div class="item-desc">
+                <h3>Eligibility</h3>
+                <ul>
+                  <li>Only businessman/Professional having capability to invest can apply.</li>
+                  <li>1500 to 2200 sq.ft area on main road or prominent location.</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-       </div>
       </div>
     </div>
   </section>
@@ -517,19 +639,19 @@
     });
   </script>
 
-<script>
-  $(".custom-carousel").owlCarousel({
-  autoWidth: true,
-  loop: true
-});
-$(document).ready(function () {
-  $(".custom-carousel .item").click(function () {
-    $(".custom-carousel .item").not($(this)).removeClass("active");
-    $(this).toggleClass("active");
-  });
-});
+  <script>
+    $(".custom-carousel").owlCarousel({
+      autoWidth: true,
+      loop: true
+    });
+    $(document).ready(function () {
+      $(".custom-carousel .item").click(function () {
+        $(".custom-carousel .item").not($(this)).removeClass("active");
+        $(this).toggleClass("active");
+      });
+    });
 
-</script>
+  </script>
 </body>
 
 </html>
