--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
           </div>
         </div>
       </div>
-      <div class="text-center">
+      <!-- <div class="text-center">
         <button class="btn btn-danger">Add More</button>
-      </div>
+      </div> -->
     </div>
   </section>
 
