--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
-          <div class="affi-box">
+          <div class="affi-box b-b">
             <img src="assets/img/skillindia.png" alt="" class="img-fluid">
           </div>
         </div>
