--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
   <section class="footer">
     <p>
-      Copyright © 2024 GTTI | Privacy Policy | 6292312466
+      Copyright © 2024 GTTI | Privacy Policy | <a href="tel:+916292312466">6292312466</a>
     </p>
   </section>
 
