--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
   <section class="footer">
     <p>
-      Copyright © 2024 GTTI | Privacy Policy | <a href="tel:+916292312466">6292312466</a>
+      Copyright © 2024 GTTI | <a href="https://www.georgetelegraph.com/privacy-policy.aspx" style="color: #fff;">Privacy Policy</a> | <a href="tel:+916292312466" style="color: #fff;">6292312466</a>
     </p>
   </section>
 
