--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                   ATC has courses that support all sorts of geographical, economical, social backgrounds.</li>
               </ul>
               <div class="mt-4">
-                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
-                  Application Details and Form</button>
+                <a href="assets/img/heritage-scheme-full-atc.pdf" style="color: black;" target="_blank"><button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
+                  Application Details and Form</button></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
@@ -241,8 +241,8 @@
                 <li>Good and Early Returns – Due to low investment, returns are good and quick</li>
               </ul>
               <div class="mt-4">
-                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
-                  Application Details and Form</button>
+                <a href="assets/img/heritage-scheme-beauty-&-wellness.pdf" style="color: black;" target="_blank"><button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
+                  Application Details and Form</button></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
@@ -288,8 +288,8 @@
                 <li>Good and Early Returns – Due to low investment, returns are good and quick. </li>
               </ul>
               <div class="mt-4">
-                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
-                  Application Details and Form</button>
+                <a href="assets/img/heritage-scheme-gtiae.pdf" style="color: black;" target="_blank"><button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
+                  Application Details and Form</button></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
@@ -326,8 +326,8 @@
 
               </ul>
               <div class="mt-4">
-                <button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
-                  Application Details and Form</button>
+                <a href="assets/img/heritage-scheme-smart.pdf" style="color: black;" target="_blank"><button class="btn btn-warning"><img src="assets/img/down.png" alt="" width="25px" class="me-2">Download
+                  Application Details and Form</button></a>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-12">
@@ -349,8 +349,8 @@
             The Franchisee</h2>
         </div>
         <div class="col-lg-9 col-md-3 col-12">
-          <div class="owl-carousel custom-carousel owl-theme">
-            <div class="item active" style="background-image: url(./assets/img/boy.png);">
+          <div class="row">
+            <div class="items active" style="background-image: url(./assets/img/boy.png);">
               <div class="item-desc">
                 <h3>Tour Gain</h3>
                 <ul>
@@ -358,7 +358,7 @@
                 </ul>
               </div>
             </div>
-            <div class="item" style="background-image: url(./assets/img/img2.jpg);">
+            <div class="items" style="background-image: url(./assets/img/img2.jpg);">
               <div class="item-desc">
                 <h3>Why Us</h3>
                 <ul>
@@ -369,7 +369,7 @@
                 </ul>
               </div>
             </div>
-            <div class="item" style="background-image: url(./assets/img/img3.jpg);">
+            <div class="items" style="background-image: url(./assets/img/img3.jpg);">
               <div class="item-desc">
                 <h3>Eligibility</h3>
                 <ul>
