--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12">
               <div class="tab-img mt-4">
-                <img src="assets/img/house.png" alt="" class="img-fluid">
+                <img src="assets/img/beauty.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -294,7 +294,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12">
               <div class="tab-img mt-4">
-                <img src="assets/img/house.png" alt="" class="img-fluid">
+                <img src="assets/img/gtiae.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -332,7 +332,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12">
               <div class="tab-img mt-4">
-                <img src="assets/img/house.png" alt="" class="img-fluid">
+                <img src="assets/img/smart-center.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
