--- a/index.html
+++ b/index.html
@@ -481,32 +481,32 @@
       <div class="row">
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/iso.png" alt="" class="img-fluid">
+            <img src="assets/img/iso.png" alt="">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/traiing.png" alt="" class="img-fluid">
+            <img src="assets/img/traiing.png" alt="">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/netaji.png" alt="" class="img-fluid">
+            <img src="assets/img/netaji.png" alt="">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/ncet.png" alt="" class="img-fluid">
+            <img src="assets/img/ncet.png" alt="">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/naps.png" alt="" class="img-fluid">
+            <img src="assets/img/naps.png" alt="">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box b-b">
-            <img src="assets/img/skillindia.png" alt="" class="img-fluid">
+            <img src="assets/img/skillindia.png" alt="">
           </div>
         </div>
       </div>
