--- a/index.html
+++ b/index.html
@@ -154,13 +154,7 @@
           </div>
           <div class="col-lg-4 col-md-4 col-12">
             <div class="mb-3">
-              <select class="form-select" aria-label="Default select example" required>
-                <option selected>Location</option>
-                <option value="">Kolkata</option>
-                <option value="">Mumbai</option>
-                <option value="">Chennai</option>
-                <option value="">Delhi</option>
-              </select>
+              <input type="text" class="form-control" id="" aria-describedby="emailHelp" placeholder="Location" required>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-12">
@@ -414,7 +408,7 @@
   <section class="top mb">
     <div class="container">
       <h2>Top Recruiters</h2>
-      <div class="row">
+      <div class="row g-0">
         <div class="col-lg-3 col-md-3 col-6">
           <div class="top-img">
             <img src="assets/img/maruti.png" alt="" class="img-fluid">
@@ -505,35 +499,35 @@
   <section class="affilia mb">
     <div class="container">
       <h2>Affiliation and Accreditations*</h2>
-      <div class="row">
+      <div class="row g-0">
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/iso.png" alt="">
+            <img src="assets/img/iso.png" alt="" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/traiing.png" alt="">
+            <img src="assets/img/traiing.png" alt="" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/nsou.png" alt="">
+            <img src="assets/img/nsou.png" alt="" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/ncvet.png" alt="">
+            <img src="assets/img/ncvet.png" alt="" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
-            <img src="assets/img/naps.png" alt="">
+            <img src="assets/img/naps.png" alt="" class="img-fluid">
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box b-b">
-            <img src="assets/img/skillindia.png" alt="">
+            <img src="assets/img/skillindia.png" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -610,15 +604,9 @@
                 <input type="text" class="form-control" id="" aria-describedby="emailHelp" placeholder="Contact Number" required>
               </div>
             </div>
-            <div class="col-lg-12 col-md-12 col-12">
+            <div class="col-lg-12 col-md-4 col-12">
               <div class="mb-3">
-                <select class="form-select" aria-label="Default select example" required>
-                  <option selected>Location</option>
-                  <option value="">Kolkata</option>
-                  <option value="">Mumbai</option>
-                  <option value="">Chennai</option>
-                  <option value="">Delhi</option>
-                </select>
+                <input type="text" class="form-control" id="" aria-describedby="emailHelp" placeholder="Location" required>
               </div>
             </div>
             <div class="col-lg-12 col-md-12 col-12">
