--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="b-text">
       <img src="assets/img/franchise.png" alt="" class="img-fluid">
       <div class="bb-text">
-        <img src="assets/img/logo.png" alt="" width="200px" height="100px">
+        <img src="assets/img/logo.png" alt="" width="200px">
         <h3 id="star">Start your new </h3>
         <h1 id="bus">business</h1>
         <div class="mt-4">
@@ -39,7 +39,7 @@
    <div class="b-div">
    <img src="assets/img/franchise.jpg" alt="" class="img-fluid">
    <div class="bb-text">
-    <img src="assets/img/logo.png" alt="" width="200px" height="100px">
+    <img src="assets/img/logo.png" alt="" width="200px" >
     <h3 id="star">Start your new </h3>
     <h1 id="bus">business</h1>
     <div class="mt-4">
