--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="mt-3">
-              <h4>Video Input Title 1</h4>
+              <h4>Post Diploma in Tool Design </h4>
               <p>
                 Due to presence of a number of disciplines, the ATC can target to get a lot many students.
               </p>
@@ -572,7 +572,7 @@
 
   <section class="footer">
     <p>
-      Copyright © 2024 GTTI | <a href="https://www.georgetelegraph.com/privacy-policy.aspx" style="color: #fff;">Privacy Policy</a> | <a href="tel:+916292312466" style="color: #fff;">6292312466</a>
+      Copyright © <script>document.write(new Date().getFullYear())</script> GTTI | <a href="https://www.georgetelegraph.com/privacy-policy.aspx" style="color: #fff;">Privacy Policy</a> | <a href="tel:+916292312466" style="color: #fff;">6292312466</a>
     </p>
   </section>
 
