--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>GTTI Franchise</title>
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
@@ -534,7 +534,7 @@
     </div>
   </section>
 
-  <section class="vieos mb">
+  <!-- <section class="vieos mb">
     <div class="container">
       <h2>Our Videos</h2>
       <div class="row">
@@ -568,7 +568,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="footer">
     <p>
