--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3 id="star">Start your new </h3>
         <h1 id="bus">business</h1>
         <div class="mt-4">
-          <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">join Us <img src="assets/img/Arrow.png" alt="" width="50px"></button>
+          <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Join us <img src="assets/img/Arrow.png" alt="" width="50px"></button>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
       <div class="row g-0">
         <div class="col-lg-3 col-md-3 col-6">
           <div class="red-box">
-            <h1 id="bus">104</h1>
+            <h1 id="bus">105</h1>
             <p>Years of training experience</p>
           </div>
         </div>
@@ -72,8 +72,8 @@
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
-            <h1 id="bus">lifetime</h1>
-            <p>Placement Assistance</p>
+            <h1 id="bus">50+</h1>
+            <p>Centres across the cities</p>
           </div>
         </div>
       </div>
@@ -380,10 +380,9 @@
               <div class="item-desc">
                 <h3><b>Why Us</b></h3>
                 <ul>
-                  <li>104 years of Training Experience.</li>
+                  <li>105 years of Training Experience.</li>
                   <li>70+ Centres , 80+ courses.</li>
-                  <li>Lifetime placement assistant.</li>
-                  <li>Job ready courses</li>
+                  <li>Job ready courses for student</li>
                 </ul>
               </div>
             </div>
@@ -393,7 +392,7 @@
               <div class="item-desc">
                 <h3><b>Eligibility</b></h3>
                 <ul>
-                  <li>Only businessman/Professional having capability to invest can apply.</li>
+                  <li>Only Businessman/Professional having capability to invest can apply.</li>
                   <li>1500 to 2200 sq.ft area on main road or prominent location.</li>
                 </ul>
               </div>
