--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
             <h1 id="bus">50+</h1>
-            <p>Centres across the cities</p>
+            <p>Centres across cities</p>
           </div>
         </div>
       </div>
@@ -382,7 +382,7 @@
                 <ul>
                   <li>105 years of Training Experience.</li>
                   <li>70+ Centres , 80+ courses.</li>
-                  <li>Job ready courses for student</li>
+                  <li>Job ready courses for students</li>
                 </ul>
               </div>
             </div>
