--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
-            <h1 id="bus">50+</h1>
-            <p>Centres across cities</p>
+            <h1 id="bus">99%</h1>
+            <p>Franchisee Rate</p>
           </div>
         </div>
       </div>
