--- a/index.html
+++ b/index.html
@@ -644,9 +644,7 @@
 
 
 
-  <div class="go-top active wow animate__animated animate__bounceInDown">
-    <i class="fa-solid fa-chevron-up" onclick="topFunction()" title="Go top"></i>
-  </div>
+<a href="#franchise" class="sticky-franchise-btn">Own a Franchise</a>
 
   <!-- Sticky Bottom Button -->
   <!-- <div class="bottom-button">
