--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 
 
 
-<a href="#franchise" class="sticky-franchise-btn">Own a Franchise</a>
+<a href="#franchise" class="sticky-franchise-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Own a Franchise</a>
 
   <!-- Sticky Bottom Button -->
   <!-- <div class="bottom-button">
