--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@
 
 
 <a href="#franchise" class="sticky-franchise-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Own a Franchise</a>
+<a href="" class="phone-st"><img src="assets/img/calling.png" alt=""></a>
 
   <!-- Sticky Bottom Button -->
   <!-- <div class="bottom-button">
