--- a/index.html
+++ b/index.html
@@ -674,6 +674,20 @@
     </div>
   </div>
 
+  <div class="mobile-footer">
+    <a href="tel:+919062187660" class="footer-phn">
+      <img src="assets/img/calling.png" alt="Call">
+    </a>
+    <a href="" class="footer-icon">
+      Own a
+      Franchise
+    </a>
+    <a href="https://api.whatsapp.com/send?phone=9062187660" class="footer-what" target="_blank">
+      <img src="assets/img/whatsapp.png" alt="WhatsApp">
+    </a>
+    
+  </div>
+
   <!-- Sticky Bottom Button -->
   <!-- <div class="bottom-button">
     <div class="row gy-0">
