--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
     <a href="tel:+919062187660" class="footer-phn">
       <img src="assets/img/calling.png" alt="Call">
     </a>
-    <a href="" class="footer-icon">
+    <a href="" class="footer-icon" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Own a
       Franchise
     </a>
