--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
     rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ 
 </head>
 
 <body>
@@ -23,7 +22,7 @@
 
   <section class="banner">
     <div class="b-text">
-      <img src="assets/img/franchise.png" alt="" class="img-fluid">
+      <img src="assets/img/franchise.webp" alt="" class="img-fluid">
       <div class="bb-text">
         <img src="assets/img/logo.jpg" alt="" width="200px">
         <h3 id="star">Start your new </h3>
@@ -107,7 +106,7 @@
         <div class="col-lg-1 col-md-1 col-0"></div>
         <div class="col-lg-5 col-md-5 col-12">
           <div class="abt-img">
-            <img src="assets/img/about-img.png" alt="The George Telegraph Training Institute" class="img-fluid">
+            <img src="assets/img/about-img.webp" alt="The George Telegraph Training Institute" class="img-fluid">
           </div>
         </div>
       </div>
@@ -229,7 +228,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-12">
               <div class="tab-img mt-4">
-                <img src="assets/img/house.png" alt="" class="img-fluid">
+                <img src="assets/img/house.webp" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -713,7 +712,7 @@
   <script src="assets/js/owl.carousel.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ 
   <script>
     var $carousel = $('[data-owl-carousel]');
     if ($carousel.length) {
