--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3 id="star">Start your new </h3>
         <h1 id="bus">business</h1>
         <div class="mt-4">
-          <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">join Us <img
+          <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Join us <img
               src="assets/img/Arrow.png" alt="" width="50px"></button>
         </div>
       </div>
