--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <img src="assets/img/franchise.webp" alt="" class="img-fluid">
       <div class="bb-text">
         <img src="assets/img/logo.jpg" alt="" width="200px">
-        <h3 id="star">Start your new </h3>
-        <h1 id="bus">business</h1>
+        <h1 id="bus">New business opportunity  </h1>
+        <h3 id="star">for you</h3>
         <div class="mt-4">
           <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Join us <img
               src="assets/img/Arrow.png" alt="" width="50px"></button>
@@ -40,8 +40,8 @@
       <img src="assets/img/franchise.jpg" alt="" class="img-fluid">
       <div class="bb-text">
         <img src="assets/img/logo.jpg" alt="" width="200px">
-        <h3 id="star">Start your new </h3>
-        <h1 id="bus">business</h1>
+        <h1 id="bus">New business opportunity  </h1>
+        <h3 id="star">for you</h3>
         <div class="mt-4">
           <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Join us <img
               src="assets/img/Arrow.png" alt="" width="50px"></button>
@@ -73,8 +73,8 @@
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
-            <h1 id="bus">99%</h1>
-            <p>Franchisee Rate</p>
+            <h1 id="bus">Iso  </h1>
+            <p>9001:2015 certified</p>
           </div>
         </div>
       </div>
@@ -369,8 +369,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-12">
-          <h2 style="text-align: left;" id="marf">Keypoints For <br>
-            The Franchisee</h2>
+          <h2 style="text-align: left;" id="marf">What you  <br>
+            should know ?</h2>
         </div>
         <div class="col-lg-9 col-md-3 col-12">
           <div class="g-section">
@@ -387,9 +387,10 @@
 
             <div class="items" style="background-image: url(./assets/img/full-1.png);">
               <div class="item-desc">
-                <h3><b>Why Us</b></h3>
+                <h3><b>Why Us?</b></h3>
                 <ul>
                   <li>105 years of Training Experience.</li>
+                  <li>Iso 9001:2015 certified</li>
                   <li>70+ Centres , 80+ courses.</li>
                   <li>Job ready courses for students</li>
                 </ul>
@@ -402,7 +403,7 @@
                 <h3><b>Eligibility</b></h3>
                 <ul>
                   <li>Only Businessman/Professional having capability to invest can apply.</li>
-                  <li>1500 to 2200 sq.ft area on main road or prominent location.</li>
+                  <li>1800 to 2500 sq.ft area on main road or prominent location.</li>
                 </ul>
               </div>
             </div>
@@ -506,7 +507,7 @@
 
   <section class="affilia mb">
     <div class="container">
-      <h2>Affiliation and Accreditations*</h2>
+      <h2>Affiliations and Accreditations*</h2>
       <div class="row g-0">
         <div class="col-lg-2 col-md-2 col-6">
           <div class="affi-box border-r">
@@ -539,6 +540,7 @@
           </div>
         </div>
       </div>
+      <p><b>*Terms and conditions : Some specific courses are affiliated</b></p>
     </div>
   </section>
 
@@ -661,8 +663,7 @@
 
 
 
-  <a href="#franchise" class="sticky-franchise-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Own a
-    Franchise</a>
+  <a href="#franchise" class="sticky-franchise-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Start your business</a>
 
   <div class="desk-top">
     <div class="phone-st">
@@ -678,8 +679,7 @@
       <img src="assets/img/calling.png" alt="Call">
     </a>
     <a href="" class="footer-icon" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      Own a
-      Franchise
+      Start your business
     </a>
     <a href="https://api.whatsapp.com/send?phone=9062187660" class="footer-what" target="_blank">
       <img src="assets/img/whatsapp.png" alt="WhatsApp">
