--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
       <div class="row g-0">
         <div class="col-lg-3 col-md-3 col-6">
           <div class="red-box">
-            <h1 id="bus">105</h1>
-            <p>Years of training experience</p>
+            <h1 id="bus" style="color: black;">105</h1>
+            <p style="color: black;">Years of training experience</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
-            <h1 id="bus">80+</h1>
+            <h1 id="bus" style="color: black;">80+</h1>
             <p>Courses</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="red-box">
-            <h1 id="bus">70+</h1>
-            <p>Centres</p>
+            <h1 id="bus" style="color: black;">70+</h1>
+            <p style="color: black;">Centres</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
-            <h1 id="bus">Iso  </h1>
+            <h1 id="bus" style="color: black;">Iso  </h1>
             <p>9001:2015 certified</p>
           </div>
         </div>
@@ -581,11 +581,11 @@
   </section> -->
 
   <section class="footer">
-    <p>
+    <p style="color: #000;">
       Copyright ©
       <script>document.write(new Date().getFullYear())</script> GTTI | <a
-        href="https://www.georgetelegraph.com/privacy-policy.aspx" style="color: #fff;">Privacy Policy</a> | <a
-        href="tel:+919062187660" style="color: #fff;">9062187660</a>
+        href="https://www.georgetelegraph.com/privacy-policy.aspx" style="color: #000;">Privacy Policy</a> | <a
+        href="tel:+919062187660" style="color: #000;">9062187660</a>
     </p>
   </section>
 
@@ -676,7 +676,7 @@
 
   <div class="mobile-footer">
     <a href="tel:+919062187660" class="footer-phn">
-      <img src="assets/img/calling.png" alt="Call">
+      <img src="assets/img/phone-call.png" alt="Call">
     </a>
     <a href="" class="footer-icon" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Start your business
