--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="col-lg-3 col-md-3 col-6">
           <div class="blue-box">
-            <h1 id="bus" style="color: black;">Iso  </h1>
+            <h1 id="bus" style="color: black;">ISO  </h1>
             <p>9001:2015 certified</p>
           </div>
         </div>
